cookies and user table added

--- a/Drizzle ORM/package.json
+++ b/Drizzle ORM/package.json
@@ -4,15 +4,21 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
