--- a/Drizzle ORM/package.json
+++ b/Drizzle ORM/package.json
@@ -21,6 +21,7 @@
     "drizzle-orm": "^0.39.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
