--- a/Drizzle ORM/package.json
+++ b/Drizzle ORM/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0"
   },
