--- a/Drizzle ORM/package.json
+++ b/Drizzle ORM/package.json
@@ -24,7 +24,8 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "drizzle-kit": "^0.30.4",
